--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+/* * {
+    border: 2px solid red;
+} */
 body {
-    display: flex;
-    flex-direction: column;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -8,13 +9,11 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    background-color: #1F2937;
     padding-top: 16px;
     padding-bottom: 16px;
-    background-color: #1F2937;
-    padding-left: 200px;
-    padding-right: 200px;
     border-bottom: 4px solid #F9FAF8
 }
 
@@ -22,12 +21,11 @@ body {
     color: #F9FAF8;
     font-size: 20px;
     font-weight: bold;
-    align-items: center;
 }
 
 .header-links, .header-links a {
     display: flex;
-    gap: 50px;
+    gap: 150px;
     list-style: none;
     text-decoration: none;
     font-size: 16px;
@@ -38,40 +36,41 @@ body {
     background-color: #1F2937;
     color: #F9FAF8;
     padding: 100px;
-
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.con-one-txt {
+.one-text {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    width: 400px;
+    gap: 10px;
+    width: 500px;
 }
 
 .awesome-title {
+    display: flex;
     font-size: 48px;
     font-weight: bold;
 }
 
-button {
-    border-radius: 10px;
-    border: none;
-    padding: 10px;
-}
-
-.hero-second {
+.one-subtext {
     font-size: 18px;
     color: #e5e7eb;
 }
 
-.sign-up {
-    background: #3882F6;
+.container-one button {
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    background-color: #3882F6;
     color: #F9FAF8;
     width: 100px;
-    height:fit-content;
+}
+
+.container-one img {
+    width: 450px;
+    height: 250px;
 }
 
 .container-two {
@@ -87,7 +86,7 @@ button {
     color: #1f2937;
 }
 
-.con-two {
+.info-section {
     display: flex;
     justify-content: center;
     gap: 30px;
@@ -101,6 +100,13 @@ button {
     max-width: 150px;
     color: #606264;
     text-align: center;
+}
+
+.container-two img {
+    width: 150px;
+    height: 150px;
+    border: 5px solid #0a2d65;
+    border-radius: 25px;
 }
 
 .container-three {
@@ -120,36 +126,22 @@ button {
     width: 700px;
 }
 
-.quote-source {
+.quote-src {
     font-weight: bold;
     font-size: 20px;
     margin-left: 500px;
 }
 
-.container-two img {
-    width: 150px;
-    height: 150px;
-    border: 5px solid #0a2d65;
-    border-radius: 25px;
-}
-
-.container-one img {
-    width: 450px;
-    height: 225px;
-}
 
 .container-four {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
+    align-items: center; 
     background-color: #3882F6;
-    margin: 40px 100px 40px 100px;
     border-radius: 10px;
-    padding-left: 100px;
-    padding-right: 200px;
-}
+    padding: 30px 110px 30px 110px;
+    margin: 50px;
 
-.four-text {
-    padding: 50px;
 }
 
 .four-text-lrg {
@@ -163,25 +155,19 @@ button {
     color: #F9FAF8;
 }
 
-.four-sign-up {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container-four button {
     border-radius: 10px;
     border: 4px solid #e5e7eb;
     background-color: #3882F6;
-    padding: 10px;
-    width: 100px;
-    height: 30px;
-    margin-top: 55px;
-
     color:#e5e7eb;
+    padding: 8px;
+    width: 150px;
 }
 
 .footer {
     background: #1F2937;
     color:#F9FAF8;
-    text-align: center;
     font-size: 12px;
+    text-align: center;
     padding: 20px;
 }
